--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,15 @@
 [versions]
 #jetbrains
 kotlin = "1.9.0"
+#Detekt
+detekt = "1.23.3"
 #AndroidX
 androidx-swiperefreshlayout = "1.1.0"
 androidx-multidex = "2.0.1"
 #Simple tools
 simple-commons = "73d78e5cd3"
 #Gradle
-gradlePlugins-agp = "8.1.1"
+gradlePlugins-agp = "8.6.1"
 #build
 app-build-compileSDKVersion = "34"
 app-build-targetSDK = "34"
@@ -27,3 +29,4 @@ simple-tools-commons = { module = "com.github.SimpleMobileTools:Simple-Commons",
 [plugins]
 android = { id = "com.android.application", version.ref = "gradlePlugins-agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
